--- a/OSPF_Routing/OSPF_Routing.vcxproj
+++ b/OSPF_Routing/OSPF_Routing.vcxproj
@@ -141,6 +141,11 @@
   <ItemGroup>
     <ClCompile Include="ospf.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ospf.ans" />
+    <None Include="ospf.in" />
+    <None Include="ospf.out" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
